--- a/style.css
+++ b/style.css
@@ -201,6 +201,11 @@ a.article:hover {
     transition: all 0.3s;
 }
 
+#map {
+		height: 800px;
+		width: 800px;
+}
+
 /* ---------------------------------------------------
     MEDIAQUERIES
 ----------------------------------------------------- */
