--- a/styles/style.css
+++ b/styles/style.css
@@ -54,6 +54,10 @@ span {
 /* ---------------------------------------------------
     SIDEBAR STYLE
 ----------------------------------------------------- */
+#side-bar {
+    display: flex;
+    height: 100%;
+}
 
 .wrapper {
     display: flex;
@@ -61,6 +65,7 @@ span {
 }
 
 #sidebar {
+    height: 100%;
     min-width: 250px;
     max-width: 250px;
     background: #7386D5;
