--- a/styles/style.css
+++ b/styles/style.css
@@ -314,3 +314,23 @@ a.article:hover {
         padding-right: 1.1rem;
     }
 }
+
+/* ---------------------------------------------------
+    LOADER STYLE
+----------------------------------------------------- */
+
+/* Paste this css to your style sheet file or under head tag */
+/* This only works with JavaScript,
+if it's not present, don't show loader */
+.no-js #loader { display: none;  }
+.js #loader { display: block; position: relative; left: 100px; top: 0; }
+.se-pre-con {
+    position: relative;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: url(../images/icons/porco_rosso.gif) center no-repeat #fff;
+    opacity: 0.9;
+}
