--- a/styles/style.css
+++ b/styles/style.css
@@ -334,3 +334,26 @@ if it's not present, don't show loader */
     background: url(../images/icons/porco_rosso.gif) center no-repeat #fff;
     opacity: 0.9;
 }
+
+/* ---------------------------------------------------
+    BAR MAP STYLE
+----------------------------------------------------- */
+
+.bar{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    left: 0.0%;
+    top: 0.0%;
+}
+
+.info {
+    padding: 6px 8px;
+    font: 14px/16px Arial, Helvetica, sans-serif;
+    background: white;
+    background: rgba(255,255,255,0);
+}
+.info h4 {
+    margin: 0 0 5px;
+    color: #777;
+}
