--- a/styles/style.css
+++ b/styles/style.css
@@ -236,7 +236,7 @@ a.article:hover {
 
 #sidebarCollapse {
         background: #7386D5;
-    }
+}
 
 /* ---------------------------------------------------
     MEDIAQUERIES
@@ -336,13 +336,13 @@ if it's not present, don't show loader */
 .no-js #loader { display: none;  }
 .js #loader { display: block; position: relative; left: 100px; top: 0; }
 .se-pre-con {
-    position: relative;
+    position: fixed;
     left: 0px;
     top: 0px;
     width: 100%;
     height: 100%;
     z-index: 9999;
-    background: url(../images/icons/porco_rosso.gif) center no-repeat #fff;
+    background: url(../images/icons/loading.gif) center no-repeat #1874D2;
     opacity: 0.9;
 }
 
