--- a/styles/style.css
+++ b/styles/style.css
@@ -308,15 +308,57 @@ a.article:hover {
     -ms-transform: scale(1);
     transform: scale(1); }
 
-@media (max-width: 450px) {
+@media (max-width: 600px) {
     .gallery {
         -webkit-column-count: 1;
         -moz-column-count: 1;
         column-count: 1;
-        -webkit-column-width: 100%;
-        -moz-column-width: 100%;
-        column-width: 100%;
+        -webkit-column-width: 33%;
+        -moz-column-width: 33%;
+        column-width: 300px;
     }
+}
+
+@media (max-width: 600px) {
+    #items-link {
+        font-size:2vh;
+    }
+
+    #beer_link {
+        font-size:2vh;
+    }
+
+    .weather {
+        width: 75px !important;
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-bottom: 50px;
+        margin-top: 50px;
+    }
+
+    .card-img-top {
+        width: 100%;
+        height: 100%;
+
+    }
+
+    #beer_container{
+        display: grid !important;
+    }
+
+    #beer_container{
+        display: grid !important;
+    }
+
+    #test {
+        display: block;
+    }
+
+    #items_container {
+        display: block;
+    }
+
+
 }
 
 @media (max-width: 400px) {
@@ -355,9 +397,10 @@ if it's not present, don't show loader */
 .bar{
     position: relative;
     width: 100%;
-    height: 100%;
+    max-height: 50vh;
     left: 0.0%;
     top: 0.0%;
+    margin-bottom: 1vh;
 }
 
 .info {
@@ -369,4 +412,12 @@ if it's not present, don't show loader */
 .info h4 {
     margin: 0 0 5px;
     color: #777;
+}
+
+.weather {
+    width: 15vh;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 50px;
+    margin-top: 50px;
 }
