LK011 continue working on trip planner *add trip creation *add trip toggle

--- a/styles/style.css
+++ b/styles/style.css
@@ -421,3 +421,46 @@ if it's not present, don't show loader */
     margin-bottom: 50px;
     margin-top: 50px;
 }
+
+.dropdown-toggle.shaker {
+    /* Start the shake animation and make the animation last for 0.5 seconds */
+    animation: shake 0.5s;
+    /* When the animation is finished, start again */
+    animation-iteration-count: 2; //single shake
+}
+
+@keyframes shake {
+    0% {
+        transform: translate(1px, 1px);
+    }
+    10% {
+        transform: translate(-1px, -2px);
+    }
+    20% {
+        transform: translate(-3px, 0px);
+    }
+    30% {
+        transform: translate(3px, 2px);
+    }
+    40% {
+        transform: translate(1px, -1px);
+    }
+    50% {
+        transform: translate(-1px, 2px);
+    }
+    60% {
+        transform: translate(-3px, 1px);
+    }
+    70% {
+        transform: translate(3px, 1px);
+    }
+    80% {
+        transform: translate(-1px, -1px);
+    }
+    90% {
+        transform: translate(1px, 2px);
+    }
+    100% {
+        transform: translate(1px, -2px);
+    }
+}
