--- a/styles/style.css
+++ b/styles/style.css
@@ -227,12 +227,59 @@ a.article:hover {
     z-index:9999;
 }
 
+/* ---------------------------------------------------
+    MAIN MAP STYLE
+----------------------------------------------------- */
+
 #map {
     width: 100%;
     padding: 0px;
     min-height: 100vh;
     transition: all 0.3s;
 }
+
+.popupCustom .leaflet-popup-content {
+    display:block;
+    margin:0px;
+}
+
+/* css to customize Leaflet default styles  */
+.popupCustom .leaflet-popup-content-wrapper {
+    background: #6d7fcc;
+    color: #ffffff;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.1em;
+    width:150px;
+    height:300px;
+    margin:0px;
+}
+
+.popupLine{
+    width: 100%;
+    height: 5px;
+    border-bottom: 1px solid white;
+    position: relative;
+}
+
+.popupCustom .roundrect {
+    border-radius: 15px;
+}
+
+.popupCustom .leaflet-popup-tip-container {
+    width:30px;
+    height:15px;
+}
+
+.popupCustom .leaflet-popup-tip {
+    border-left:15px solid transparent;
+    border-right:15px solid transparent;
+    border-top:15px solid #2c3e50;
+}
+
+
+/* ---------------------------------------------------
+    SIDE BAR STYLE
+----------------------------------------------------- */
 
 #sidebarCollapse {
         background: #7386D5;
@@ -463,4 +510,11 @@ if it's not present, don't show loader */
     100% {
         transform: translate(1px, -2px);
     }
+}
+
+.btn-group-toggle.btn-block {
+    display: flex;
+}
+.btn-group-toggle.btn-block > .btn {
+    flex: 1;
 }
