--- a/styles/style.css
+++ b/styles/style.css
@@ -250,7 +250,7 @@ a.article:hover {
     font-family: 'Poppins', sans-serif;
     font-size: 1.1em;
     width:150px;
-    height:300px;
+    height:190px;
     margin:0px;
 }
 
@@ -270,11 +270,7 @@ a.article:hover {
     height:15px;
 }
 
-.popupCustom .leaflet-popup-tip {
-    border-left:15px solid transparent;
-    border-right:15px solid transparent;
-    border-top:15px solid #2c3e50;
-}
+
 
 
 /* ---------------------------------------------------
@@ -452,13 +448,15 @@ if it's not present, don't show loader */
 
 .info {
     padding: 6px 8px;
-    font: 14px/16px Arial, Helvetica, sans-serif;
-    background: white;
-    background: rgba(255,255,255,0);
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.1em;
+    color:white;
+    border-radius: 25px;
+    background-color:#7386D5;
 }
 .info h4 {
     margin: 0 0 5px;
-    color: #777;
+    color: #7386D5;
 }
 
 .weather {
