--- a/styles/style.css
+++ b/styles/style.css
@@ -286,6 +286,29 @@ a.article:hover {
 }
 
 
+/* css to customize Leaflet default styles  */
+.popupBar .leaflet-popup-content-wrapper {
+    background: #57587f;
+    color: #ffffff;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.1em;
+    width:100px;
+    height:100px;
+    margin:0px;
+}
+
+.popupBar .roundrect {
+    border-radius: 15px;
+}
+
+
+
+.popupBar .leaflet-popup-tip-container {
+    width:30px;
+    height:15px;
+}
+
+
 
 
 /* ---------------------------------------------------
