LKBite 5 : - Draft on the return function (on date display functioning but only on the first click, refresh the page is still compulsory). - The starting date is now set on tomorrow - Button Direct / Indirect are hidden while the return is set on "One day trip"

--- a/styles/style.css
+++ b/styles/style.css
@@ -68,8 +68,8 @@ span {
 
 #sidebar {
     height: 100%;
-    min-width: 20em;
-    max-width: 150px;
+    min-width: 15em;
+    max-width: 15em;
     background: #57585f;
     color: #fff;
     transition: all 0.3s;
