--- a/styles/style.css
+++ b/styles/style.css
@@ -334,52 +334,63 @@ a.article:hover {
     MEDIAQUERIES
 ----------------------------------------------------- */
 
-@media (max-width: 768px) {
+@media only screen and (max-width: 700px) and (orientation:landscape) {
     #sidebar {
-        min-width: 100px;
-        max-width: 100px;
+        min-width: 15em;
+        max-width: 15em;
         text-align: center;
-        margin-left: -100px !important;
     }
-    .dropdown-toggle::after {
-        top: auto;
-        bottom: 10px;
-        right: 50%;
-        -webkit-transform: translateX(50%);
-        -ms-transform: translateX(50%);
-        transform: translateX(50%);
+    ul.CTAs {
+    padding: 3%;
     }
-    #sidebar.active {
-        margin-left: 0 !important;
+    #sidebar .sidebar-header {
+    display : none;
     }
-    #sidebar .sidebar-header h3,
-    #sidebar .CTAs {
-        display: none;
-    }
-    #sidebar .sidebar-header strong {
+
+    #sidebar.active .sidebar-header{
+        text-align: center;
+        background: #57585f;
+        padding: 15%;
+        max-width: 5em;
         display: block;
+    };
+    .form-group {
+        margin-bottom: 1%;
     }
-    #sidebar ul li a {
-        padding: 20px 10px;
+    .mr-sm-2, .mx-sm-2 {
+    /* margin-right: .5rem!important; */
+        align-content: center;
+        margin-bottom: 0%;
     }
-    #sidebar ul li a span {
-        font-size: 0.85em;
+    .h3, h3 {
+        font-size: 1.5rem;
+        margin-bottom: 0;
     }
-    #sidebar ul li a i {
-        margin-right: 0;
-        display: block;
+    .leaflet-bottom {
+        height: 100%;
     }
-    #sidebar ul ul a {
-        padding: 10px !important;
+    .leaflet-control {
+        float: left;
+        clear: unset;
     }
-    #sidebar ul li a i {
-        font-size: 1.3em;
+    .leaflet-right .leaflet-control {
+        margin-right: 0px;
     }
-    #sidebar {
-        margin-left: 0;
+    .leaflet-bottom .leaflet-control {
+        margin-bottom: 0px;
     }
-    #sidebarCollapse span {
-        display: none;
+    #myInput {
+    background-image: url(/css/searchicon.png);
+    background-position: 10px 12px;
+    background-repeat: no-repeat;
+    width: 100%;
+    font-size: 16px;
+    padding: 12px 20px 12px 40px;
+    border: 1px solid #ddd;
+    /* margin-bottom: 12px; */
+    }
+    .leaflet-touch .leaflet-control-attribution {
+        display:none;
     }
 }
 
