--- a/styles/style.css
+++ b/styles/style.css
@@ -243,7 +243,7 @@ a.article:hover {
 }
 
 #myInput {
-  background-image: url('/css/searchicon.png'); /* Add a search icon to input */
+  /* background-image: url('/css/searchicon.png');  Add a search icon to input */
   background-position: 10px 12px; /* Position the search icon */
   background-repeat: no-repeat; /* Do not repeat the icon image */
   width: 100%; /* Full-width */
@@ -490,9 +490,19 @@ if it's not present, don't show loader */
     background: url(../images/icons/loading.gif) no-repeat center fixed;
     background-size: cover;
     opacity: 0.75;
+    display: none;
 }
 
-
+.se-loading-function {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: url(../images/icons/train_animation.gif) no-repeat center fixed;
+    background-size: cover;
+    opacity: 0.8;
+    display: none;
+}
 
 /* ---------------------------------------------------
     BAR MAP STYLE
