--- a/styles/style.css
+++ b/styles/style.css
@@ -392,6 +392,9 @@ a.article:hover {
     .leaflet-touch .leaflet-control-attribution {
         display:none;
     }
+    .leaflet-bottom {
+        bottom: unset;
+    }
 }
 
 @media only screen and (max-width: 700px) and (orientation:portrait) {
