--- a/styles/style.css
+++ b/styles/style.css
@@ -848,3 +848,7 @@ input:checked + .slider:before {
     overflow-y: auto;
 }
 
+.city-card{
+    background: rgba(255, 255, 255, 0.5) !important;
+}
+
